OnAfterRenderAsync will cause a problem and will not allow the PushNotifications component to load appropriately in iOS devices and will enter in an endless loop.

--- a/BlazorMovies/Client/wwwroot/index.html
+++ b/BlazorMovies/Client/wwwroot/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Flix Manager</title>
     <base href="/" />
+    <meta name="description"
+          content="Flix Manager is a Blazor course based on a progressive web app that helps in managing a library of movies." />
+    <meta name="keywords"
+          content="Blazor course, progressive web app course." />
+    <meta name="author"
+          content="Rafael Sanchez" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <!--link href="css/myapp.css" rel="stylesheet" />--> <!-- Custom global CSS file -->
